# screencapture-qt-gstreamer

./: CMakeLists.txt  README.html  README.md  glvideowidget.cpp  glvideowidget.h  main.cpp  screencaptureprocessor.cpp  screencaptureprocessor.h
